** Modified config for budget app
Signed-off-by: Benjo Silverio <benjamin.silverio@globalbrainforce.com>

--- a/src/core/.env
+++ b/src/core/.env
@@ -1,20 +1,20 @@
-APP_ENV=local
+APP_ENV=development
 APP_KEY=*0GPIfHADQXL5%vosCsX--mdka@Fp&S2
 APP_DEBUG=true
 APP_LOG_LEVEL=debug
-APP_URL=http://dev.robot.proj
+APP_URL=http://budget.development.proj
 SHARED_KEY=sd65af76sa5f6sadf57sdf576dsf576saf
 JWT_SECRET=sd65af76sa5f6sadf57sdf576dsf576saf
 
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=robot
-DB_DATABASE_TESTING=robot
+DB_DATABASE=budget
+DB_DATABASE_TESTING=budget_test
 DB_USERNAME=root
 DB_USERNAME_TESTING=root
-DB_PASSWORD=robot
-DB_PASSWORD_TESTING=robot
+DB_PASSWORD=vpnmentor
+DB_PASSWORD_TESTING=vpnmentor
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
